manifests/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp-frontend
  labels:
    app.kubernetes.io/instance: testapp
    app.kubernetes.io/version: "1.0.0"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: testapp-frontend
    app.kubernetes.io/instance: testapp

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-frontend
  labels:
    
    app.kubernetes.io/instance: testapp
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: testapp-frontend
      app.kubernetes.io/instance: testapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: testapp-frontend
        app.kubernetes.io/instance: testapp
        app.kubernetes.io/component: frontend
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: frontend
          image: okteto/testapp-frontend
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              targetPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 250m
              memory: 128Mi
